# liquid-sim

./: .gitignore  CMakeLists.txt
include/: block.h  game.h  grid.h  input-manager.h  material-type.h  ui.h
scripts/: build.bat  generateVs2022.bat  generateVs2026.bat
src/: block.cpp  game.cpp  grid.cpp  input-manager.cpp  main.cpp  ui.cpp
